0.22.3 - in development
-----------------------
Maintenance release.

 * qlog
   * Fix - crashes when trying show log of subdirectory with --show-trees option.
     (IWATA Hidetaka, Bug #974362)


0.22.2 - 2012/04/05
-------------------
Maintenance release.

 * qrun:
   * Localized help text for selected command is shown correctly now.
     (Alexander Belchenko, Bug #963542)
 * qshelve:
   * Pressing Ctrl+Enter in message edit area triggers shelve action.
     (IWATA Hidetaka, Bug #936982)
   * Hunks are not displayed on Mac OS. (IWATA Hidetaka, Bug #955241)
 * qgetnew:
   * Ask for verification if a checkout should go to a non-empty
     directory - this may cause unwanted conflicts (André Bachmann, Bug #938835)
 * qdiff
   * Fix - crashes when trying show complete diff of renamed file. (Bug #969055)
 * Don't use deprecated API (bzrlib.builtins.tree_files). 
   (Alexander Belchenko, Bug #776241)


0.22.1 - 2012/02/21
-------------------
Just in time for bzr 2.5.

 * New command: qignore. (Alexander Belchenko, Bug #524785)


0.22.0 "Alder" - 2012/02/07
---------------------------
What's new in this release:

QBzr 0.22 is companion release for bzr 2.5, and compatible with bzr 2.4.
This release has many improvements and bugfixes. As usual many improvements 
related to qdiff dialog.

While searching for the word or sentence all matches are highlighted.
This highlighting works in qdiff, qshelve, qunshelve, qannotate.
To make navigation faster through the long side-by-side diff, or inside big 
annotated file you can use backside guide bar in qdiff and qannotate.

Behavior change: "Unchanged" option in treewidget filter now only applies 
to versioned files. (Before it was applied to unknown files too).

Other qdiff improvements include: curved lines are using in side-by-side view, 
smart synchronization of side-by-side view in "Complete" mode;
files with wrong or mixed encoding no more shown as "latin-1", but in user-
specified encoding.
