@@ -113,6 +113,7 @@ def get_title_for_tree(tree, branch, other_branch):
     # XXX I don't know what other cases we need to handle
     return 'Unknown tree'
 
+
 class DiffWindow(QBzrWindow):
 
     def __init__(self, arg_provider, parent=None,
